# soot-site

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  as.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
backend/.vercel/: project.json
backend/configs/gunicorn/: prod.py
backend/corporate/: apps.py  context_processors.py  urls.py
backend/corporate/admin/: __init__.py  banner.py  contact.py  gallery.py  live_stream.py  profile.py  site.py  socialmedia.py
backend/corporate/forms/: user.py
backend/corporate/models/: __init__.py  banner.py  contact.py  live_stream.py  profile.py  socialmedia.py
backend/corporate/signals/: __init__.py  user.py
backend/kernel/: settings.py  urls.py
corporate/: context_processors.py  urls.py
corporate/admin/: __init__.py  banner.py  contact.py  gallery.py  instrument.py  live_stream.py  site.py
corporate/forms/: contact.py
corporate/migrations/: 0001_initial.py  0002_sitecontent.py  0003_livestream.py  0004_delete_instrument.py
corporate/models/: __init__.py  contact.py  gallery.py  instrument.py  live_stream.py  site.py
corporate/translation/: __init__.py  instrument.py
corporate/views/: __init__.py  contact.py  gallery.py  home.py  instructor.py  instrument.py  live_stream.py  register.py
kernel/: settings.py
nginx/: Dockerfile  Dockerfile.dev
nginx/certs/: cert.pem  fullchain.pem  privkey.pem
nginx/configs/: nginx-dev.conf  nginx.conf
postgres/: Dockerfile  command.sh
postgres/configs/: postgres.env  postgresql.conf
(+50 files in other folders)
