[tool.poetry]
name = "uni-project"
version = "0.1.0"
description = ""
authors = ["MohmdFo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = [
    { version = ">=4.2,<5.0", python = ">=3.8,<3.10"}, 
    { version = ">=4.2,<5.3", python = ">=3.10" }  # Django 4.2 and 5.x for Python 3.10+
]
django-sage-blog = "^0.2.9"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.54"
python-decouple = "^3.8"
jdatetime = "^5.2.0"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
